--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <h1 class="title">Random Quote Generator</h1>
                 <div id="quote-box">
                     <p id="quote" class="quote-text">Click the button to get a new quote!</p>
-                    <p id="author" class="quote-author"></p>
+                    <p id="author" class="quote-author">Author name</p>
                 </div>
                 <button id="new-quote">New Quote</button>
             </div>
