--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Age Calculator & Quote Generator</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Age Calculator and Quote Generator</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
@@ -13,17 +13,17 @@
                 <h1 class="title"><span>Age Calculator</span></h1>
                 <div class="input-box">
                     <input type="date" id="date">
-                    <button onclick="calculateAge()">Calculate</button>
+                    <button onclick="calculateAge()">Calculate Age</button>
                 </div>
                 <p id="result"></p>
             </div>
         </div>
         <div class="half">
             <div class="quote-generator">
-                <h1 class="title">Random Quote Generator</h1>
+                <h1 class="title">Quote Generator</h1>
                 <div id="quote-box">
-                    <p id="quote" class="quote-text">Click the button to get a new quote!</p>
-                    <p id="author" class="quote-author">Author name</p>
+                    <p id="quote" class="quote-text">Click the button below for a new quote!</p>
+                    <p id="author" class="quote-author"></p>
                 </div>
                 <button id="new-quote">New Quote</button>
             </div>
@@ -38,7 +38,7 @@
         function calculateAge() {
             let birthdate = new Date(userInput.value);
             if (!birthdate.getTime()) {
-                result.innerHTML = "Please select a valid date.";
+                result.innerHTML = "Please enter a valid date of birth.";
                 return;
             }
             let today = new Date();
@@ -51,7 +51,7 @@
             let months = (today.getFullYear() - birthdate.getFullYear()) * 12 + today.getMonth() - birthdate.getMonth();
             let days = Math.floor((today - birthdate) / (1000 * 60 * 60 * 24));
 
-            result.innerHTML = `You are <span>${age}</span> years, <span>${months % 12}</span> months and <span>${days % 30}</span> days old.`;
+            result.innerHTML = `You are <span>${age}</span> years, <span>${months % 12}</span> months, and <span>${days % 30}</span> days old.`;
         }
 
         // Quote Generator
@@ -60,29 +60,22 @@
             { quote: "The way to get started is to quit talking and begin doing.", author: "Walt Disney" },
             { quote: "Your time is limited, so don't waste it living someone else's life.", author: "Steve Jobs" },
             { quote: "If life were predictable it would cease to be life, and be without flavor.", author: "Eleanor Roosevelt" },
-            { quote: "If you look at what you have in life, you'll always have more. If you look at what you don't have in life, you'll never have enough.", author: "Oprah Winfrey" },
             { quote: "If you set your goals ridiculously high and it's a failure, you will fail above everyone else's success.", author: "James Cameron" },
             { quote: "Life is what happens when you're busy making other plans.", author: "John Lennon" },
-            { quote: "Don't watch the clock; do what it does. Keep going.", author: "Sam Levenson" },
-            { quote: "Keep your face always toward the sunshine—and shadows will fall behind you.", author: "Walt Whitman" },
-            { quote: "It is always the simple that produces the marvelous.", author: "Amelia Barr" },
-            { quote: "The world is full of magical things patiently waiting for our wits to grow sharper.", author: "Bertrand Russell" },
-            { quote: "Let us make our future now, and let us make our dreams tomorrow's reality.", author: "Malala Yousafzai" },
-            { quote: "All you need is the plan, the road map, and the courage to press on to your destination.", author: "Earl Nightingale" },
-            { quote: "The glow of one warm thought is to me worth more than money.", author: "Thomas Jefferson" },
-            { quote: "Once you replace negative thoughts with positive ones, you'll start having positive results.", author: "Willie Nelson" },
-            { quote: "Every moment is a fresh beginning.", author: "T.S. Eliot" },
-            { quote: "Without hard work, nothing grows but weeds.", author: "Gordon B. Hinckley" },
-            { quote: "We can do anything we want to if we stick to it long enough.", author: "Helen Keller" },
-            { quote: "Every great dream begins with a dreamer.", author: "Harriet Tubman" },
-            { quote: "The best way to predict the future is to create it.", author: "Peter Drucker" },
-            { quote: "Believe you can and you're halfway there.", author: "Theodore Roosevelt" },
-            { quote: "Your present circumstances don't determine where you can go; they merely determine where you start.", author: "Nido Qubein" },
-            { quote: "Start where you are. Use what you have. Do what you can.", author: "Arthur Ashe" },
-            { quote: "You are never too old to set another goal or to dream a new dream.", author: "C.S. Lewis" },
-            { quote: "Success is not final, failure is not fatal: It is the courage to continue that counts.", author: "Winston Churchill" },
-            { quote: "Hardships often prepare ordinary people for an extraordinary destiny.", author: "C.S. Lewis" },
-            { quote: "Keep your eyes on the stars, and your feet on the ground.", author: "Theodore Roosevelt" }
+            { quote: "Spread love everywhere you go. Let no one ever come to you without leaving happier.", author: "Mother Teresa" },
+            { quote: "Don't judge each day by the harvest you reap but by the seeds that you plant.", author: "Robert Louis Stevenson" },
+            { quote: "The future belongs to those who believe in the beauty of their dreams.", author: "Eleanor Roosevelt" },
+            { quote: "Tell me and I forget. Teach me and I remember. Involve me and I learn.", author: "Benjamin Franklin" },
+            { quote: "The best and most beautiful things in the world cannot be seen or even touched - they must be felt with the heart.", author: "Helen Keller" },
+            { quote: "It is during our darkest moments that we must focus to see the light.", author: "Aristotle" },
+            { quote: "Whoever is happy will make others happy too.", author: "Anne Frank" },
+            { quote: "Do not go where the path may lead, go instead where there is no path and leave a trail.", author: "Ralph Waldo Emerson" },
+            { quote: "The only limit to our realization of tomorrow will be our doubts of today.", author: "Franklin D. Roosevelt" },
+            { quote: "You will face many defeats in life, but never let yourself be defeated.", author: "Maya Angelou" },
+            { quote: "The greatest glory in living lies not in never falling, but in rising every time we fall.", author: "Nelson Mandela" },
+            { quote: "In the end, it's not the years in your life that count. It's the life in your years.", author: "Abraham Lincoln" },
+            { quote: "Life is either a daring adventure or nothing at all.", author: "Helen Keller" },
+            { quote: "Many of life's failures are people who did not realize how close they were to success when they gave up.", author: "Thomas A. Edison" }
         ];
 
         document.getElementById('new-quote').addEventListener('click', () => {
